--- a/Templates/websites/index.html
+++ b/Templates/websites/index.html
@@ -40,42 +40,25 @@
 
 
     <!-- Search Areas-->
+
     <center><h1 style=""> Movie Recommendation System</h1></center>
-    <form method="POST" accept-charset="utf-8">
+
 	    <div class="form-group shadow-textarea" style="margin-top: 30px;text-align: center;color: white;">
-	        <input type="text" name="search-field" class="movie form-control" id="autoComplete" autocomplete="off" placeholder="Enter the Movie Name" style="background-color: #ffffff;border-color:#ffffff;width: 60%;color: #181818" required="required" />
+            <form method="POST" accept-charset="utf-8">
+	        <input type="text" name="search_field" class="movie form-control" id="autoComplete" autocomplete="off" placeholder="Enter the Movie Name" style="background-color: #ffffff;border-color:#ffffff;width: 60%;color: #181818" required="required" />
 	        <br>
              <input type="submit" value="GO!" class="btn btn-primary btn-block movie-button" style="background-color: #e50914;text-align: center;border-color: #e50914;width:120px;" />
-	    </div>
-    </form>
-
-	    <div class="form-group" style="text-align: center;">
-            <input type="submit" value="GO!" class="btn btn-primary btn-block movie-button" style="background-color: #e50914;text-align: center;border-color: #e50914;width:120px;" />
-	      <button class="btn btn-primary btn-block movie-button" style="background-color: #e50914;text-align: center;border-color: #e50914;width:120px;" >Enter</button><br><br>
-	    </div>
+	        </form>
+        </div>
 
 	</div>
 
 
+<!-- Rendering movie data -->
+{% for data in movie_list %}
+	<h6 align="center" style="color: white">{{data}}</h6><br>
+{% endfor %}
 
-  <div id="loader" class="text-center">
-  	       {% for data in movie_list %}
-        <div class="movie">
-          <div class="movie-image">
-            <span class="play">
-              <span class="name">X-MAN</span>
-            </span>
-            <a href="#"><img src="{{url_for('static',filename='movie1.jpg')}}" alt="" />
-          </a> </div>
-            <div class="rating">
-              <p>{{data}}</p>
-              <div class="stars">
-              <div class="stars-in"></div>
-            </div>
-           </div>
-        </div>
-        {% endfor %}
-  </div>
 
   <div class="fail">
     <center><h3>Sorry! The movie you requested is not in our database.
